--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
-version: '3.8'
-
 services:
   web:
     build: .
     ports:
       - '5000:5000'
-    volumes:
-      - .:/app
     environment:
-      - FLASK_ENV=development
+      - FLASK_APP=app:create_app
+      - FLASK_RUN_HOST=0.0.0.0
+    depends_on:
+      - db
+    command: >
+      sh -c "flask db upgrade && flask run --host=0.0.0.0 --port=5000"
