--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,8 @@ services:
   web:
     build: .
     ports:
-      - '5000:5000'
-    environment:
-      - FLASK_APP=app:create_app
-      - FLASK_RUN_HOST=0.0.0.0
-    depends_on:
-      - db
+      - '8000:8000'
+    env_file:
+      - .env
     command: >
-      sh -c "flask db upgrade && flask run --host=0.0.0.0 --port=5000"
+      sh -c "alembic upgrade head && uvicorn main:app --host=0.0.0.0 --port=8000 --reload"
