--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,7 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/fastapi_db
-    depends_on:
-      - db
+      - DATABASE_URL=${DATABASE_URL}
     volumes:
       - .:/app
     command: >
@@ -17,18 +15,3 @@ services:
       alembic upgrade head &&
       uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
       "
-
-  db:
-    image: postgres:15
-    container_name: fastapi_db
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: statify_db
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-
-volumes:
-  postgres_data:
