--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,4 +36,4 @@ repos:
     rev: v1.17.0
     hooks:
       - id: mypy
-        args: ['--ignore-missing-imports']
+        args: ['--ignore-missing-imports', '--config-file', 'mypy.ini']
