--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,6 +25,7 @@ repos:
     hooks:
       - id: flake8
         additional_dependencies: ['flake8-bugbear', 'flake8-comprehensions']
+        args: ['--config=.flake8']
 
   - repo: https://github.com/PyCQA/bandit
     rev: 1.8.6
