--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   fastapi:
     build: .
@@ -7,10 +9,20 @@ services:
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - PYTHONPATH=/
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
     volumes:
       - .:/app
+    depends_on:
+      - redis
     command: >
       bash -c "
       alembic upgrade head &&
       uvicorn main:app --host 0.0.0.0 --port 8000 --reload
       "
+
+  redis:
+    image: redis:7
+    container_name: redis_cache
+    ports:
+      - '6379:6379'
